# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added the script ip-forwarding that detects devices that have IP
  forwarding enabled (acting as routers). [Patrik Karlsson]

o [NSE] Added the script samba-vuln-cve-2012-1182 which detects the SAMBA CVE
  2012-1182 vulnerability. [Aleksandar Nikolic]

o [NSE] Added the script dns-check-zone that checks DNS configuration against
  best practices including RFC 1912. [Patrik Karlsson]

o [NSE] Added the http-gitweb-projects-enum that queries a gitweb for a list
  of Git projects, their authors and descriptions. [riemann]

o [NSE] targets-sniffer now is capable of sniffing IPv6 addresses.
  [Daniel Miller]

o [NSE] Added the script traceroute-geolocation that queries geographic
  locations of each traceroute hop and allows to export the results to KLM,
  allowing the hops to be plotted on a map. [Patrik Karlsson]

o [NSE] Added the ipp library and the script cups-info that lists available
  printers by querying the cups network daemon. [Patrik Karlsson]

o [NSE] Added the mobilme library and the scripts http-icloud-findmyiphone and
  http-icloud-sendmsg, that finds the location of iOS devices and provides
  functionality to send them messages. [Patrik Karlsson]

o [NSE] Added gps library and the gpsd-info script that collects GPS data
  from the gpsd daemon. [Patrik Karlsson]

o [NSE] Ported the pop3-brute script to use the brute library.
  [Piotr Olma]

o Fixed a compilation problem on Solaris 9 caused by a missing
  definition of IPV6_V6ONLY. Reported by Dagobert Michelsen.

o Upgraded included libpcap to version 1.2.1.

o [NSE] Added hostmap-robtex.nse by Arturo Busleiman, which finds other
  domain names sharing the IP address of the target.

o [NSE] Renamed hostmap.nse to hostmap-bfk.nse.

o [NSE] Added http-robtex-shared-ns by Arturo Busleiman, finding
  domain names that share the same name server as the target.

o [NSE] Added the script http-vlcstreamer-ls which queries the VLC Streamer